src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Closed_Converted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days Closed Converted</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Opened__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Date on which the status changed to Open.</description>
        <label>Days Opened</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Uncoverted_Closed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days Uncoverted Closed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Worked__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days Worked</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Status_Change_Date__c</fullName>
        <defaultValue>TODAY() - 5</defaultValue>
        <label>Last Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Priority__c</fullName>
        <label>Lead Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Utterly_Important</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Quality_Helper__c</fullName>
        <formula>IF(ISBLANK(Email), 0, 1) + IF(ISBLANK( Phone ), 0, 1) + IF(ISBLANK( Company ), 0, 1) + IF(ISBLANK( Title ), 0, 1) + IF(ISPICKVAL( Industry, &quot;&quot; ), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Quality Helper</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Quality__c</fullName>
        <formula>IMAGE(
  CASE(Lead_Quality_Helper__c,
    1, &quot;/img/samples/stars_100.gif&quot;,
    2, &quot;/img/samples/stars_200.gif&quot;,
    3, &quot;/img/samples/stars_300.gif&quot;,
    4, &quot;/img/samples/stars_400.gif&quot;,
    5, &quot;/img/samples/stars_500.gif&quot;,
       &quot;/img/samples/stars_000.gif&quot;),
&quot;Unknown&quot;)&amp;&quot; &quot;&amp;IMAGE(&quot;/resource/star_image_empty&quot;,
  &quot;Unknown&quot;,22,24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_SLA_Value__c</fullName>
        <label>Previous SLA Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rdcc__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rdcc__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rdcc__Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rdcc__ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rdcc__Project_Bid_Date__c</fullName>
        <formula>rdcc__Project__r.rdcc__Bid_Date_Only__c</formula>
        <label>Project Bid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rdcc__Project_Categories__c</fullName>
        <label>Project Categories</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rdcc__Project_Company_Roles__c</fullName>
        <label>Project Company Role</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rdcc__Project_Contact_Roles__c</fullName>
        <label>Project Contact Role</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rdcc__Project_Estimated_Value__c</fullName>
        <formula>rdcc__Project__r.rdcc__Estimated_Value__c</formula>
        <label>Project Estimated Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rdcc__Project_Scope__c</fullName>
        <label>Project Scope</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rdcc__Project_Stage__c</fullName>
        <formula>TEXT(rdcc__Project__r.rdcc__Stage__c)</formula>
        <label>Project Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rdcc__Project_Work_Type__c</fullName>
        <formula>TEXT( rdcc__Project__r.rdcc__Work_Type__c )</formula>
        <label>Project Work Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rdcc__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>rdcc__ReedProject__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rdcc__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rdcc__insight_company_id__c</fullName>
        <label>Insight company id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rdcc__insight_contact_id__c</fullName>
        <label>Insight contact id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <listViews>
        <fullName>rdcc__All_Leads</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>rdcc__Project__c</columns>
        <columns>rdcc__Project_Estimated_Value__c</columns>
        <columns>rdcc__Project_Stage__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>ConstructConnect Insight</value>
        </filters>
        <label>All Leads</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>